--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <div id="chart"></div>
 
+<br>
+<hr>
+<br>
+
+<div id="chart2"></div>
+
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
+<link rel="stylesheet" type="text/css" href="style.css">
 
 
 <script src="StudentAnswersEntity.json.js"></script>
