--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <div class="chart" id="daily-active-students"></div>
 <div class="chart" id="attempted-completed-questions"></div>
 
+<script   src="https://code.jquery.com/jquery-3.2.1.min.js"   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="   crossorigin="anonymous"></script>
+
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
 <link rel="stylesheet" type="text/css" href="style.css">
@@ -8,9 +10,12 @@
 <script src="course-data/StudentAnswersEntity.json.js"></script>
 
 <script src="scripts/helpers.js"></script>
-<!--
+
 <script src="scripts/dailyActiveStudents-highchart.js"></script>
 <script src="scripts/dailyActiveStudents.js"></script>
--->
+
+
+<!--
 <script src="scripts/attemptedCompletedQuestions-highchart.js"></script>
 <script src="scripts/attemptedCompletedQuestions.js"></script>
+-->
