--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
             <select id="lesson-id">
               <option value="-1">all lessons</option>
             </select>
+            <br>
+            <label for="sort-by-difficulty">
+              <input id="sort-by-difficulty" type="checkbox"> Sort by difficulty
+            </label>
           </div>
         </div>
 
