Add Quizly support and fix complexity=infinity bug

--- a/index.html
+++ b/index.html
@@ -53,9 +53,20 @@
               <option value="-1">all lessons</option>
             </select>
             <br>
-            <label for="sort-by-difficulty">
-              <input id="sort-by-difficulty" type="checkbox"> Sort by difficulty
-            </label>
+            <p>
+              <label for="show-quizly">
+                <input id="show-quizly" type="checkbox" checked> Quizly
+              </label>
+              <label for="show-sa">
+                <input id="show-sa" type="checkbox" checked> SaQuestion
+              </label>
+              <label for="show-mc">
+                <input id="show-mc" type="checkbox" checked> McQuestion
+              </label>
+              <label for="sort-by-difficulty">
+                <input id="sort-by-difficulty" type="checkbox"> Sort by difficulty
+              </label>
+            </p>
           </div>
         </div>
 
