Add Quizly preview

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <script src="scripts/helpers.js"></script>
     <script src="./syllabus.js"></script>
+    <script src="./quizly-desc.js"></script>
     <script src="scripts/dailyActiveStudents-highchart.js"></script>
     <script src="scripts/dailyActiveStudents.js"></script>
     <script src="scripts/attemptedCompletedQuestions-highchart.js"></script>
