Add RAM course data

--- a/index.html
+++ b/index.html
@@ -11,9 +11,25 @@
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
 
+  <!--
+    <script>
+      var dataFolder = 'ram8647/';
+      var courseDomain = 'ram8647.appspot.com/mobileCSP/';
+    </script>
+
+    <script src="ram8647/syllabus.js"></script>
+    <script src="ram8647/quizly-desc.js"></script>
+  -->
+
+    <script>
+      var dataFolder = 'mobilecsp-2017/';
+      var courseDomain = 'mobilecsp-2017.appspot.com/mobilecsp/';
+    </script>
+
+    <script src="mobilecsp-2017/syllabus.js"></script>
+    <script src="mobilecsp-2017/quizly-desc.js"></script>
+
     <script src="scripts/helpers.js"></script>
-    <script src="./syllabus.js"></script>
-    <script src="./quizly-desc.js"></script>
     <script src="scripts/dailyActiveStudents-highchart.js"></script>
     <script src="scripts/dailyActiveStudents.js"></script>
     <script src="scripts/attemptedCompletedQuestions-highchart.js"></script>
