Add filter function

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
 
-  <!--
+<!--
     <script>
       var dataFolder = 'ram8647/';
       var courseDomain = 'ram8647.appspot.com/mobileCSP/';
@@ -19,7 +19,8 @@
 
     <script src="ram8647/syllabus.js"></script>
     <script src="ram8647/quizly-desc.js"></script>
-  -->
+-->
+
 
     <script>
       var dataFolder = 'mobilecsp-2017/';
@@ -28,6 +29,8 @@
 
     <script src="mobilecsp-2017/syllabus.js"></script>
     <script src="mobilecsp-2017/quizly-desc.js"></script>
+
+
 
     <script src="scripts/helpers.js"></script>
     <script src="scripts/dailyActiveStudents-highchart.js"></script>
@@ -94,6 +97,12 @@
     </form>
 
     <div id="chart"></div>
+
+    <div id="filter" class="pure-form">
+      <span>filter questions</span>
+      <br>
+      <input type="text" id="filterText">
+    </div>
 
   </body>
 </html>
