Move some code around

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
 
+    <script src="scripts/string.js"></script>
+    <script src="scripts/helpers.js"></script>
+    <script src="scripts/ready.js"></script>
+
 <!--
     <script>
       var dataFolder = 'ram8647/';
@@ -31,8 +35,6 @@
     <script src="mobilecsp-2017/quizly-desc.js"></script>
 
 
-
-    <script src="scripts/helpers.js"></script>
     <script src="scripts/dailyActiveStudents-highchart.js"></script>
     <script src="scripts/dailyActiveStudents.js"></script>
     <script src="scripts/attemptedCompletedQuestions-highchart.js"></script>
