--- a/pca/index.html
+++ b/pca/index.html
@@ -29,7 +29,7 @@
       });
 
       function processData(data) {
-        scatter = data['Principal Component Analysis'].elements;
+        scatter = data['2017 PCA'].elements;
 
         for (i in scatter) {
           scatter[i].x = parseFloat(scatter[i].x);
