Add gender breakdown chart

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
     <script src="scripts/dailyActiveStudents.js"></script>
     <script src="scripts/attemptedCompletedQuestions-highchart.js"></script>
     <script src="scripts/attemptedCompletedQuestions.js"></script>
+    <script src="scripts/genderBreakdown-highchart.js"></script>
+    <script src="scripts/genderBreakdown.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css"
@@ -55,6 +57,7 @@
         <select id="chart-type">
           <option>Daily Active Students</option>
           <option>Attempted and Completed Questions</option>
+          <option>Gender Breakdown</option>
         </select>
 
         <div id="additional-fields">
