Add world GeoJSON

--- a/map/index.html
+++ b/map/index.html
@@ -62,25 +62,13 @@
         if (states[keys[k]] > max) max = states[keys[k]];
       }
 
-      /*
-      var Esri_WorldGrayCanvas = L.tileLayer('http://server.arcgisonline.com/ArcGIS/rest/services/Canvas/World_Light_Gray_Base/MapServer/tile/{z}/{y}/{x}', {
-      	attribution: 'Tiles &copy; Esri &mdash; Esri, DeLorme, NAVTEQ',
-      	maxZoom: 16
-      }).addTo(map); */
-
-
-      var Stamen_TonerLite = L.tileLayer('http://stamen-tiles-{s}.a.ssl.fastly.net/toner-lite/{z}/{x}/{y}.{ext}', {
+      var base = L.tileLayer('http://stamen-tiles-{s}.a.ssl.fastly.net/toner-lite/{z}/{x}/{y}.{ext}', {
       	attribution: 'Map tiles by <a href="http://stamen.com">Stamen Design</a>, <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> &mdash; Map data &copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>',
       	subdomains: 'abcd',
       	minZoom: 0,
       	maxZoom: 20,
       	ext: 'png'
       }).addTo(map);
-
-      /*
-      L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
-      }).addTo(map); */
 
       function getColor(d) {
         if (d == 0) return '#fff';
@@ -96,17 +84,28 @@
       }
 
       function onEachFeature(feature, layer) {
-        var name = layer.feature.properties.NAME;
+        var name = layer.feature.properties.NAME; // US state
+        var niceName = name;
+        if (!name) {
+          name = layer.feature.properties.iso_a3;
+          niceName = layer.feature.properties.name;
+        }
+
         var val = states[name];
         if (!val) val = 0;
 
-        layer.bindPopup('<b>' + name + '</b> ' + val);
-        //layer.on('mouseover', function() { layer.openPopup(); });
-        //layer.on('mouseout', function() { layer.closePopup(); });
+        layer.bindPopup('<b>' + niceName + '</b> ' + val);
       }
 
 
-      $.getJSON('us-states.geojson', function(data) {
+      $.getJSON('usa.geojson', function(data) {
+        var usMap = new L.geoJSON(data, {
+          style: style,
+          onEachFeature: onEachFeature,
+        }).addTo(map);
+      });
+
+      $.getJSON('world.geojson', function(data) {
         var usMap = new L.geoJSON(data, {
           style: style,
           onEachFeature: onEachFeature,
