World map properly working now

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
           <option>Daily Active Students</option>
           <option>Attempted and Completed Questions</option>
           <option>Gender Breakdown</option>
+          <option>World Map</option>
         </select>
 
         <div id="additional-fields">
