--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <option>Daily Active Students</option>
           <option>Attempted and Completed Questions</option>
           <option>Gender Breakdown</option>
-          <option>World Map</option>
+          <option>Geographic Distribution</option>
         </select>
 
         <div id="additional-fields">
