--- a/map/index.html
+++ b/map/index.html
@@ -9,6 +9,7 @@
       crossorigin="anonymous"></script>
 
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="flags.min.css">
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css"
       integrity="sha512-wcw6ts8Anuw10Mzh9Ytw4pylW8+NAD4ch3lqm9lzAsTxg0GFeJgoAtxuCLREZSC5lUXdVyo/7yfsqFjQ4S+aKw=="
@@ -34,6 +35,7 @@
 
     $(document).ready(function() {
       var codeToCountry = {};
+      var code3to2 = {};
       var places = {};
 
       var usersTotal = 0;
@@ -161,6 +163,7 @@
             name = layer.feature.properties.iso_a3;
             niceName = layer.feature.properties.name;
             codeToCountry[name] = niceName;
+            code3to2[name] = (layer.feature.properties.iso_a2).toLowerCase();
           }
 
           var val = places[name];
@@ -191,8 +194,17 @@
         var keys = Object.keys(places);
         for (i in keys) {
           var place = keys[i];
-          if (codeToCountry[place]) place = codeToCountry[place];
-          dataset.push([place, places[keys[i]], ((places[keys[i]]/usersTotal)*100).toFixed(1)]);
+          var code = 'us';
+          if (codeToCountry[place]) { // then international
+            code = code3to2[place];
+            place = codeToCountry[place];
+          } else if (place == 'Unknown') {
+            code = '';
+          }
+
+          var flag = code ? '<img src="blank.gif" class="flag flag-' + code + '"> ' : '';
+
+          dataset.push([flag + place, places[keys[i]], ((places[keys[i]]/usersTotal)*100).toFixed(1)]);
         }
 
         $('#mytable').DataTable({
