Change color scheme

--- a/map/index.html
+++ b/map/index.html
@@ -144,7 +144,7 @@
         function getColor(d) {
           if (d == 0) return '#fff';
           if (d == 1) d = 0.99;
-          var colors = ['f1eef6', 'bdc9e1', '74a9cf', '2b8cbe', '045a8d'];
+          var colors = ['f0f9e8', 'bae4bc', '7bccc4', '43a2ca', '0868ac'];
           return '#' + colors[parseInt(d*5)];
         }
 
