--- a/map/index.html
+++ b/map/index.html
@@ -144,7 +144,7 @@
         function getColor(d) {
           if (d == 0) return '#fff';
           if (d == 1) d = 0.99;
-          var colors = ['f0f9e8', 'bae4bc', '7bccc4', '43a2ca', '0868ac'];
+          var colors = ['ffffcc', 'a1dab4', '41b6c4', '2c7fb8', '253494'];
           return '#' + colors[parseInt(d*5)];
         }
 
